# engram

./: .gitignore  LICENSE  README.md  pyproject.toml
engram/: __init__.py  archive.py  cli.py  config.example.json  db.py  densify.py  hook.py  normalize.py  parser.py  recall_feedback.py  surfacer.py
engram/migrations/: 001_initial.sql  002_feedback_and_dedup.sql  003_connections_unique.sql  004_user_speaker_snippet.sql  005_compression_level.sql  006_session_archives.sql  007_drop_connections.sql  008_dedup_prefetch_normalize.sql  009_snippet_store.sql
