[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "engram-memory"
version = "0.3.0"
description = "Cross-session episodic memory for AI coding assistants"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{name = "Gray Owl Research"}]
keywords = ["llm", "memory", "ai", "claude", "episodic", "cross-session"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[tool.setuptools.packages.find]
include = ["engram*"]

[project.urls]
Homepage = "https://github.com/morecitricacid-coder/engram"

[project.scripts]
engram = "engram.cli:main"
memory = "engram.cli:main"
